[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "run-dipc"
dynamic = ["version"]
description = "Diploid chromatin conformation capture analysis"
readme = "README_pypi.md"
license = {file = "LICENSE"}
authors = [
    {name = "Longzhi Tan"},
]
keywords = ["bioinformatics", "chromatin", "Hi-C", "3D genome", "single-cell"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22,<2",
    "scipy>=1.7,<1.15",
    "rmsd>=1.5",
    "mmcif-pdbx>=2.0",
]

[project.urls]
Homepage = "https://github.com/tanlongzhi/dip-c"
Repository = "https://github.com/tanlongzhi/dip-c"

[project.optional-dependencies]
seg = ["pysam>=0.20"]
all = ["pysam>=0.20"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
dip-c = "dip_c.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dip_c.data.color" = ["*.gz"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
